Add Pagination to assigned students api
